--- a/index.html
+++ b/index.html
@@ -8,44 +8,51 @@
   </head>
   <body>
     <div class="widget-container">
-      <div data-get="profile statistics" data-animate="true" class="unfootprint-widget auto-height large dark rounded-l" data-handle="emiel-kwakkel" data-accountid="f8daa751-4931-4f0d-8bd3-9976afc4657d">
-        <div class="header">
-          <span class="profile-name">Emiel Kwakkel</span> plant bomen!
-        </div>
-        <div class="row">
-          <div class="multi-column">
-            <div class="column">
-              <div class="image-container">
-                <div class="image"></div>
-              </div>
-              <div class="content">
-                <div class="trees-planted value"></div>
-                <div class="comment">Bomen laten planten</div>
-              </div>
-            </div>
-            <div class="column hide-small">
-              <div class="image-container">
-                <div class="image car"></div>
-              </div>
-              <div class="content">
-                <div class="car-avg-diesel-1km value" data-target="" data-initial=""></div>
-                <div class="comment">Km in dieselauto</div>
-              </div>
-            </div>
-            <div class="column">
-              <div class="image-container">
-                <div class="image airplane"></div>
-              </div>
-              <div class="content">
-                <div class="value">
-                  <span class="flight-ams-jfk" data-target="" data-initial=""></span>x
+      <a href="https://unfootprint.com">
+        <div data-get="profile statistics" data-animate="true" class="unfootprint-widget auto-height large dark rounded-l" data-handle="emiel-kwakkel" data-accountid="f8daa751-4931-4f0d-8bd3-9976afc4657d">
+          <div class="header">
+            <span class="profile-name">Emiel Kwakkel</span> plant bomen!
+          </div>
+          <div class="row">
+            <div class="multi-column">
+              <div class="column">
+                <div class="image-container">
+                  <div class="image"></div>
                 </div>
-                <div class="comment">Schiphol - New York</div>
+                <div class="content">
+                  <div class="trees-planted value"></div>
+                  <div class="comment">Bomen laten planten</div>
+                </div>
+              </div>
+              <div class="column hide-small">
+                <div class="image-container">
+                  <div class="image car"></div>
+                </div>
+                <div class="content">
+                  <div class="car-avg-diesel-1km value" data-target="" data-initial=""></div>
+                  <div class="comment">Km in dieselauto</div>
+                </div>
+              </div>
+              <div class="column">
+                <div class="image-container">
+                  <div class="image airplane"></div>
+                </div>
+                <div class="content">
+                  <div class="value">
+                    <span class="flight-ams-jfk" data-target="" data-initial=""></span>x
+                  </div>
+                  <div class="comment">Schiphol - New York</div>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+      </a>
+    </div>
+    <div class="logo-container">
+      <a href="https://unfootprint.com">
+        <img src="assets/unFootprint-logo-white-small.png">
+      </a>
     </div>
     <link async rel="stylesheet" href="https://unfootprint.com/widgets/v2/widgets.min.css" />
     <link async rel="stylesheet" href="extension.css" />
