Add options page

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       </a>
     </div>
     <div class="logo-container">
+      <button id="go-to-options">Go to options</button>
       <a href="https://unfootprint.com">
         <img src="assets/unFootprint-logo-white-small.png">
       </a>
@@ -57,5 +58,6 @@
     <link async rel="stylesheet" href="https://unfootprint.com/widgets/v2/widgets.min.css" />
     <link async rel="stylesheet" href="extension.css" />
     <script async src="https://unfootprint.com/widgets/v2/widgets.js" charset="utf-8"></script>
+    <script async src="extension.js" charset="utf-8"></script>
   </body>
 </html>
